topological ordering for DAGs

--- a/classic/graph_playground.ipynb
+++ b/classic/graph_playground.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Graphs - Playground\n",
     "\n",
-    "A place to develop a custom graph module"
+    "Simple graph utilities (creation, reporting), and some graph algorithms."
    ]
   },
   {
@@ -19,8 +19,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Topological order** or **topological sort**: a sequence of vertex ids, such that for no directed edge A→B, B is given in the list before A. Is only possible in a DAG (in a graph without directed cycles). https://en.wikipedia.org/wiki/Topological_sorting"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,79 +72,90 @@
     "        return out\n",
     "    \n",
     "    def dfs(self,v=None,visited=None,path=None,topord=None,verbose=False):\n",
-    "        '''Depth-first exploration, purposeless for now'''\n",
-    "        if v is None: v=next(iter(self.adj.keys())) # First vertex (whatever)\n",
-    "        if visited is None: visited = [0]*len(self.adj)\n",
+    "        \"\"\"Depth-first search; returns topological sorting.\"\"\"\n",
+    "        if v is None: v=next(iter(self.adj.keys()))     # If needed, pick some random vertex as a root\n",
+    "        if visited is None: visited = [0]*len(self.adj) # If needed, mark all v as unvisited\n",
     "        if path is None:    path = []\n",
-    "        if topord is None:  topord = []\n",
-    "        visited[v] = 1\n",
-    "        topord.append(v)\n",
+    "        if topord is None:  topord = []                 # Topological ordering, will be returned\n",
+    "        visited[v] = 1                                  # Mark current v as visited\n",
     "        path += [v]\n",
     "        if verbose: print(path)\n",
-    "        for i in self.adj[v]:\n",
-    "            if visited[i]==0:\n",
-    "                self.dfs(i,visited,path,topord=topord,verbose=verbose)\n",
-    "        return topord\n",
+    "        for i in self.adj[v]:                           # For all connections from the current vertex\n",
+    "            if visited[i]==0:                           # If they weren't yet visited, visit them\n",
+    "                topord = self.dfs(i,visited,path,topord=topord,verbose=verbose)\n",
+    "        return [v]+topord                               # Update topo-order when LEAVING the node (reverse postorder)\n",
     "                \n",
     "    def bfs(self,v=None,target=None,verbose=False):\n",
-    "        if v is None: v = next(iter(self.adj.keys())) # One whatever vertex, put in a list\n",
-    "        q = [v] # Queue\n",
-    "        dl = [0]\n",
-    "        visited = [0]*len(self.adj)\n",
-    "        while len(q)>0:\n",
-    "            v = q.pop(-1)\n",
-    "            d = dl.pop(-1) # Degree of separation (min distance)\n",
+    "        \"\"\"Breadth-first exploration, looking for a distance from one vertex to another.\"\"\"\n",
+    "        if v is None: v = next(iter(self.adj.keys()))   # If needed, pick some random vertex as a root\n",
+    "        q = [(v,0)]                                     # Queue of vertices to be visited, with their distances from the root\n",
+    "        visited = [0]*len(self.adj)                     # Not recursive, so mark all as unvisited\n",
+    "        while len(q)>0:                                 # While queue isn't empty\n",
+    "            (v,d) = q.pop(-1)                           # Pop the last element of the queue\n",
     "            if v==target:\n",
     "                return d\n",
-    "            if verbose: print(v,q)\n",
+    "            if verbose: print(v,':',q)\n",
     "            visited[v] =  1\n",
     "            for i in self.adj[v]:\n",
-    "                if visited[i]==0 and (i not in q):\n",
-    "                    q.append(i)\n",
-    "                    dl.append(d+1)                    "
+    "                if visited[i]==0 and ((i,d+1) not in q):\n",
+    "                    q.append((i,d+1))                 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Graph of 6 edges:\n",
-      "0:[2, 1]\n",
-      "2:[0, 1, 3]\n",
-      "1:[0, 2]\n",
-      "3:[2]\n",
-      "4:[5]\n",
-      "5:[4]\n",
+      "Graph of 8 edges:\n",
+      "0:[1, 2]\n",
+      "1:[0, 3]\n",
+      "2:[0, 3, 4]\n",
+      "3:[1, 2, 5]\n",
+      "5:[3, 4]\n",
+      "4:[2, 5]\n",
+      "6:[7]\n",
+      "7:[6]\n",
+      "\n",
       "dfs:\n",
       "[0]\n",
-      "[0, 2]\n",
-      "[0, 2, 1]\n",
-      "[0, 2, 1, 3]\n",
+      "[0, 1]\n",
+      "[0, 1, 3]\n",
+      "[0, 1, 3, 2]\n",
+      "[0, 1, 3, 2, 4]\n",
+      "[0, 1, 3, 2, 4, 5]\n",
+      "dfs output: [0, 1, 3, 2, 4, 5]\n",
+      "\n",
       "bfs:\n",
-      "0 []\n",
-      "1 [2]\n",
-      "2 []\n",
-      "3 []\n",
-      "2\n",
-      "2\n",
-      "None\n"
+      "0 : []\n",
+      "2 : [(1, 1)]\n",
+      "4 : [(1, 1), (3, 2)]\n",
+      "5 : [(1, 1), (3, 2)]\n",
+      "3 : [(1, 1), (3, 2)]\n",
+      "1 : [(1, 1), (3, 2)]\n",
+      "3 : [(1, 1)]\n",
+      "1 : []\n",
+      "bfs output: None\n",
+      "4\n",
+      "4\n",
+      "2\n"
      ]
     }
    ],
    "source": [
-    "g = Graph()\n",
-    "g.add_edges([(0,2),(0,1),(1,2),(2,3),(4,5)])\n",
+    "# First, let's try it all with an undirected graph\n",
+    "\n",
+    "g = Graph(directed=False)\n",
+    "g.add_edges([(0,1),(0,2),(1,3),(2,3),(3,5),(2,4),(4,5),(6,7)])\n",
     "print(g)\n",
     "#g.adj_matrix()\n",
-    "print('dfs:')\n",
-    "g.dfs(verbose=True)\n",
-    "print('bfs:')\n",
-    "g.bfs(verbose=True)\n",
+    "print('\\ndfs:')\n",
+    "print('dfs output:',g.dfs(0,verbose=True))\n",
+    "print('\\nbfs:')\n",
+    "print('bfs output:',g.bfs(verbose=True))\n",
     "print(g.bfs(0,3))\n",
     "print(g.bfs(3,0))\n",
     "print(g.bfs(2,5))"
@@ -145,45 +163,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Graph of 6 edges:\n",
-      "0:[2, 1]\n",
-      "2:[3]\n",
-      "1:[2]\n",
-      "3:[]\n",
-      "4:[5]\n",
+      "Graph of 8 edges:\n",
+      "0:[1, 2]\n",
+      "1:[3]\n",
+      "2:[3, 4]\n",
+      "3:[5]\n",
       "5:[]\n",
+      "4:[5]\n",
+      "6:[7]\n",
+      "7:[]\n",
+      "\n",
       "dfs:\n",
       "[0]\n",
-      "[0, 2]\n",
-      "[0, 2, 3]\n",
-      "[0, 2, 3, 1]\n",
+      "[0, 1]\n",
+      "[0, 1, 3]\n",
+      "[0, 1, 3, 5]\n",
+      "[0, 1, 3, 5, 2]\n",
+      "[0, 1, 3, 5, 2, 4]\n",
+      "dfs output: [0, 2, 4, 1, 3, 5]\n",
+      "\n",
       "bfs:\n",
-      "0 []\n",
-      "1 [2]\n",
-      "2 []\n",
-      "3 []\n",
+      "0 : []\n",
+      "2 : [(1, 1)]\n",
+      "4 : [(1, 1), (3, 2)]\n",
+      "5 : [(1, 1), (3, 2)]\n",
+      "3 : [(1, 1)]\n",
+      "1 : []\n",
+      "bfs output: None\n",
       "2\n",
       "None\n",
-      "None\n"
+      "2\n"
      ]
     }
    ],
    "source": [
+    "# Now, exactly same commands, but with a directed graph\n",
+    "\n",
     "g = Graph(directed=True)\n",
-    "g.add_edges([(0,2),(0,1),(1,2),(2,3),(4,5)])\n",
+    "g.add_edges([(0,1),(0,2),(1,3),(2,3),(3,5),(2,4),(4,5),(6,7)])\n",
     "print(g)\n",
     "#g.adj_matrix()\n",
-    "print('dfs:')\n",
-    "g.dfs(verbose=True)\n",
-    "print('bfs:')\n",
-    "g.bfs(verbose=True)\n",
+    "print('\\ndfs:')\n",
+    "print('dfs output:',g.dfs(0,verbose=True))\n",
+    "print('\\nbfs:')\n",
+    "print('bfs output:',g.bfs(verbose=True))\n",
     "print(g.bfs(0,3))\n",
     "print(g.bfs(3,0))\n",
     "print(g.bfs(2,5))"
@@ -191,55 +221,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Graph of 30 edges:\n",
-      "0:[0, 1, 2, 3]\n",
-      "1:[]\n",
-      "2:[5, 6, 14, 22]\n",
-      "3:[4, 11, 21]\n",
-      "4:[7, 8, 16, 23]\n",
-      "5:[9, 17]\n",
-      "6:[12, 15]\n",
-      "7:[10, 18, 28]\n",
-      "8:[25]\n",
-      "9:[]\n",
-      "10:[13]\n",
-      "11:[26]\n",
-      "12:[]\n",
-      "13:[]\n",
-      "14:[]\n",
-      "15:[24]\n",
-      "16:[]\n",
-      "17:[20]\n",
-      "18:[19]\n",
-      "19:[]\n",
-      "20:[29]\n",
-      "21:[]\n",
-      "22:[]\n",
-      "23:[27]\n",
-      "24:[]\n",
-      "25:[]\n",
-      "26:[]\n",
-      "27:[]\n",
-      "28:[]\n",
-      "29:[]\n",
-      "[0, 1, 2, 5, 9, 17, 20, 29, 6, 12, 15, 24, 14, 22, 3, 4, 7, 10, 13, 18, 19, 28, 8, 25, 16, 23, 27, 11, 26, 21]\n"
+      "[0]\n"
      ]
     }
    ],
    "source": [
+    "# Random graph\n",
     "g = Graph(directed=True)\n",
     "for i in range(30):\n",
     "    j = np.random.randint(g.n())\n",
     "    g.add_edge(j,i)\n",
-    "print(g)\n",
-    "print(g.dfs())"
+    "# print(g)\n",
+    "print(g.dfs(verbose=False))"
    ]
   }
  ],
