Work on max increasing subarray

--- a/lil_problems/all_perm.ipynb
+++ b/lil_problems/all_perm.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# All permutations"
+    "# Return all permutations of a list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -26,19 +26,19 @@
     }
    ],
    "source": [
-    "# Print all permutations:\n",
+    "# Recursive solution:\n",
     "def allperm(n):\n",
     "    ap([],list(range(n)))\n",
     "\n",
-    "def ap(res,l):\n",
+    "def ap(done,l):                 # start: left half that is already done, l: list to draw from\n",
     "    if len(l)==1:\n",
-    "        print(res+l)\n",
+    "        print(done+l)           # if no choice, just return it.\n",
     "    else:\n",
-    "        for i in range(len(l)):\n",
-    "            if i<len(l):\n",
-    "                ap(res+[l[i]],l[:i]+l[i+1:])\n",
+    "        for i in range(len(l)): # Go through all elements of the list\n",
+    "            if i<len(l):        # Add one element to the part that done, recurse on a shorter list\n",
+    "                ap(done+[l[i]],l[:i]+l[i+1:])\n",
     "            else:\n",
-    "                ap(res+[l[i]],l[:i])\n",
+    "                ap(done+[l[i]],l[:i])\n",
     "            \n",
     "    \n",
     "allperm(3)"
@@ -84,7 +84,8 @@
     }
    ],
    "source": [
-    "# Return all permutations\n",
+    "# Another version that does same thing, but in a different order\n",
+    "# I like it much less\n",
     "def allperm(n):\n",
     "    return ap(list(range(n)))\n",
     "\n",
