--- a/lil_problems/max_increasing_subarray.ipynb
+++ b/lil_problems/max_increasing_subarray.ipynb
@@ -53,7 +53,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now same, but with a dictionary of sorts"
+    "Now same, but with a dictionary of sorts\n",
+    "\n",
+    "Apparently doesn't work that well, because the binary search part is buggy. It's prob better to code the binary search thing an abstract tool, test it separately, and then build the solver function ot use it."
    ]
   },
   {
