--- a/classic/graph_playground.ipynb
+++ b/classic/graph_playground.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,44 +27,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Graph:    \n",
+    "class Graph:\n",
+    "    \"\"\"Minimalistic graph toolbox.\"\"\"\n",
     "    def __init__(self,nv=1,directed=False):\n",
-    "        '''Create empty graph'''\n",
+    "        '''Create an empty graph.'''\n",
     "        self.adj = {}\n",
     "        self.nv = nv\n",
     "        self.directed = directed # Plug for the future\n",
     "        for i in range(self.nv):\n",
     "            self.adj[i] = []\n",
     "            \n",
-    "    def n(self): return len(self.adj)\n",
+    "    def n(self): \n",
+    "        \"\"\"Number of vertices + updates nv property.\"\"\"\n",
+    "        self.nv = len(self.adj)\n",
+    "        return self.nv\n",
     "            \n",
     "    def __str__(self):\n",
     "        return f'Graph of {len(self.adj)} edges:\\n'+'\\n'.join([str(key)+':'+str(self.adj[key]) for key in self.adj])\n",
     "    \n",
     "    def add_edge(self,i,j):\n",
+    "        \"\"\"Adds one edge from i to j (and j to i if the graph isn't directed).\"\"\"\n",
     "        if i not in self.adj: \n",
     "            self.adj[i] = [j]\n",
     "        else:                 \n",
-    "            self.adj[i].append(j)\n",
+    "            if j not in self.adj[i]: # Say no to double-edges\n",
+    "                self.adj[i].append(j)\n",
+    "        if j not in self.adj:\n",
+    "            self.adj[j] = []\n",
     "        if not self.directed:\n",
-    "            if j not in self.adj: \n",
-    "                self.adj[j] = [i]\n",
-    "            else:                 \n",
-    "                self.adj[j].append(i)\n",
-    "        else:\n",
-    "            if j not in self.adj: \n",
-    "                self.adj[j] = []\n",
+    "            self.directed = True # A roundabout way to add the opposite edge recursively\n",
+    "            self.add_edge(j,i)   # .. without triggering an infinite loop.\n",
+    "            self.directed = False        \n",
+    "                \n",
+    "    def del_edge(self,i,j):\n",
+    "        \"\"\"Deletes edge from i to j (and if undirected, also from j to i).\"\"\"\n",
+    "        if i not in self.adj: return\n",
+    "        if j not in self.adj: return\n",
+    "        if j in self.adj[i]:          # Remove gives an error if you try to remove non-existent element\n",
+    "            self.adj[i].remove(j)\n",
+    "        if not self.directed:\n",
+    "            if i in self.adj[j]:\n",
+    "                self.adj[j].remove(i)\n",
     "                \n",
     "    def add_edges(self,ts):\n",
-    "        '''Accepts a list of tuples'''\n",
+    "        \"\"\"Builds a graph from a list of tuples\"\"\"\n",
     "        for (i,j) in ts:\n",
     "            self.add_edge(i,j)\n",
     "                \n",
-    "    def adj_matrix(self):\n",
+    "    def a(self):\n",
+    "        \"\"\"Returns adjacency matrix.\"\"\"\n",
     "        out = np.zeros((len(self.adj),len(self.adj)),dtype=int)\n",
     "        for i in self.adj:\n",
     "            for j in self.adj[i]:\n",
@@ -72,7 +87,7 @@
     "        return out\n",
     "    \n",
     "    def dfs(self,v=None,visited=None,path=None,topord=None,verbose=False):\n",
-    "        \"\"\"Depth-first search; returns topological sorting.\"\"\"\n",
+    "        \"\"\"Depth-first search from a given, or random, node. Returns topological sorting from this node.\"\"\"\n",
     "        if v is None: v=next(iter(self.adj.keys()))     # If needed, pick some random vertex as a root\n",
     "        if visited is None: visited = [0]*len(self.adj) # If needed, mark all v as unvisited\n",
     "        if path is None:    path = []\n",
@@ -98,12 +113,195 @@
     "            visited[v] =  1\n",
     "            for i in self.adj[v]:\n",
     "                if visited[i]==0 and ((i,d+1) not in q):\n",
-    "                    q.append((i,d+1))                 "
+    "                    q.append((i,d+1))\n",
+    "                    \n",
+    "    def reverse(self):\n",
+    "        \"\"\"Reverse the graph.\"\"\"\n",
+    "        g = Graph(self.n(), self.directed) # Strictly speaking, there's no need to reverse undirected.\n",
+    "        for (k,vals) in self.adj.items():  # If I had a copy() method, I could have just used it here.\n",
+    "            for v in vals:\n",
+    "                g.add_edge(v,k)\n",
+    "        return g\n",
+    "    \n",
+    "    def randomize(self,nedges=None):\n",
+    "        \"\"\"Add some random edges to the graph (n_edges==n_nodes by default).\"\"\"\n",
+    "        if nedges is None: nedges = self.nv\n",
+    "        for _ in range(nedges):\n",
+    "            i = np.random.randint(self.nv)\n",
+    "            j = np.random.randint(self.nv)\n",
+    "            self.add_edge(j,i)\n",
+    "    \n",
+    "    def force_toporder(self):\n",
+    "        \"\"\"Forces a DFS-based topological order; is not afraid of cycles, but also ruins DAGs\n",
+    "        (ignores good reasonable edges and just plows ahead).\"\"\"\n",
+    "        queue = list(self.adj.keys()) # By itself keys() return dict keys object, and not a list\n",
+    "        topo = []\n",
+    "        while len(queue)>0:\n",
+    "            i = queue.pop()\n",
+    "            temp = self.dfs(i)\n",
+    "            queue = [q for q in queue if q not in temp] # Remove newly visited nodes from the queue\n",
+    "            temp =  [q for q in temp  if q not in topo] # Remove previously visited nodes from new batch\n",
+    "            topo += temp\n",
+    "        return topo\n",
+    "    \n",
+    "    def trim_loops(self):\n",
+    "        \"\"\"Removes loops from a graph\"\"\"\n",
+    "        for k,v in self.adj.items():\n",
+    "            if k in v:\n",
+    "                v.remove(k)\n",
+    "    \n",
+    "    def _dfs_cycler(self,v,root=None,visited=None):\n",
+    "        \"\"\"Helper function: checks if you can cycle from a node to itself.\"\"\"\n",
+    "        if root is None: root=v\n",
+    "        if visited is None: visited = []\n",
+    "        if root in self.adj[v]: return False\n",
+    "        if self.adj[v]==[]: return True\n",
+    "        for i in self.adj[v]:\n",
+    "            if i not in visited:\n",
+    "                visited.append(i)\n",
+    "                if not self._dfs_cycler(i,root,visited):\n",
+    "                    return False\n",
+    "        return True\n",
+    "    \n",
+    "    def isdag(self):\n",
+    "        \"\"\"Checks if there are any cycles in a graph.\"\"\"\n",
+    "        if not self.directed: return False # Undirected graphs can't be DAGs\n",
+    "        queue = list(self.adj.keys())\n",
+    "        for v in queue:\n",
+    "            if not self._dfs_cycler(v):\n",
+    "                return False\n",
+    "        return True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Graph of 5 edges:\n",
+      "0:[]\n",
+      "1:[0]\n",
+      "2:[4]\n",
+      "3:[1]\n",
+      "4:[]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 210,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Generate a graph\n",
+    "f = Graph(5,directed=True)\n",
+    "f.randomize()\n",
+    "f.trim_loops()\n",
+    "print(f)\n",
+    "f.isdag()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Graph of 5 edges:\n",
+      "0:[0]\n",
+      "1:[]\n",
+      "2:[2]\n",
+      "3:[3, 1]\n",
+      "4:[]\n",
+      "Topological order:\n",
+      " [4, 3, 1, 2, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test forced toporder\n",
+    "f = Graph(5,directed=True)\n",
+    "f.randomize()\n",
+    "print(f)\n",
+    "topo = f.force_toporder()\n",
+    "print(\"Topological order:\\n\",topo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Graph of 10 edges:\n",
+      "0:[1, 7, 3, 3]\n",
+      "1:[7, 0]\n",
+      "2:[]\n",
+      "3:[5, 0, 0]\n",
+      "4:[6]\n",
+      "5:[8, 3, 6]\n",
+      "6:[9, 4, 5]\n",
+      "7:[1, 0]\n",
+      "8:[5]\n",
+      "9:[6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test random graph\n",
+    "g = Graph(10)\n",
+    "g.randomize()\n",
+    "print(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Graph of 4 edges:\n",
+      "0:[2]\n",
+      "2:[3]\n",
+      "1:[2]\n",
+      "3:[]\n",
+      "Graph of 4 edges:\n",
+      "0:[]\n",
+      "1:[]\n",
+      "2:[0, 1]\n",
+      "3:[2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test graph reversal\n",
+    "g = Graph(directed=True)\n",
+    "g.add_edges([(0,2),(1,2),(2,3)])\n",
+    "print(g)\n",
+    "print(g.reverse())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -218,29 +416,6 @@
     "print(g.bfs(3,0))\n",
     "print(g.bfs(2,5))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Random graph\n",
-    "g = Graph(directed=True)\n",
-    "for i in range(30):\n",
-    "    j = np.random.randint(g.n())\n",
-    "    g.add_edge(j,i)\n",
-    "# print(g)\n",
-    "print(g.dfs(verbose=False))"
-   ]
   }
  ],
  "metadata": {
@@ -259,7 +434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
