Closer to Kosaraju

--- a/classic/graph_kosaraju_sharir.ipynb
+++ b/classic/graph_kosaraju_sharir.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,6 +59,9 @@
       " |  dfs(self, v=None, visited=None, path=None, topord=None, verbose=False)\n",
       " |      Depth-first search from a given, or random, node. Returns topological sorting from this node.\n",
       " |  \n",
+      " |  isdag(self)\n",
+      " |      Checks if there are any cycles in a graph.\n",
+      " |  \n",
       " |  n(self)\n",
       " |      Number of vertices + updates nv property.\n",
       " |  \n",
@@ -68,8 +71,11 @@
       " |  reverse(self)\n",
       " |      Reverse the graph.\n",
       " |  \n",
-      " |  toporder(self)\n",
-      " |      DFS-based topological order.\n",
+      " |  rpo(self)\n",
+      " |      Reversed Post-Order (DFS-based). Returns a toporder on a DAG, just an RPO on others.\n",
+      " |  \n",
+      " |  trim_loops(self)\n",
+      " |      Removes loops from a graph\n",
       " |  \n",
       " |  ----------------------------------------------------------------------\n",
       " |  Data descriptors defined here:\n",
@@ -89,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -97,26 +103,26 @@
      "output_type": "stream",
      "text": [
       "Graph of 20 edges:\n",
-      "0:[4, 1]\n",
-      "1:[2, 0]\n",
-      "2:[1, 5]\n",
-      "3:[7]\n",
-      "4:[0, 12]\n",
-      "5:[2, 6, 6]\n",
-      "6:[5, 13, 5]\n",
-      "7:[3, 10]\n",
-      "8:[17]\n",
-      "9:[16]\n",
-      "10:[7, 12, 11]\n",
-      "11:[11, 11, 10]\n",
-      "12:[4, 10, 16, 16]\n",
-      "13:[6, 19, 14]\n",
-      "14:[13]\n",
-      "15:[19]\n",
-      "16:[9, 12, 12, 19]\n",
-      "17:[8, 18, 18]\n",
-      "18:[17, 17]\n",
-      "19:[13, 15, 16]\n"
+      "0:[8, 1]\n",
+      "1:[18, 0]\n",
+      "2:[14]\n",
+      "3:[10]\n",
+      "4:[11]\n",
+      "5:[14, 7, 6]\n",
+      "6:[8, 5]\n",
+      "7:[5]\n",
+      "8:[0, 6, 15]\n",
+      "9:[12]\n",
+      "10:[3, 11]\n",
+      "11:[4, 10]\n",
+      "12:[9, 12]\n",
+      "13:[14]\n",
+      "14:[2, 5, 13, 15, 18]\n",
+      "15:[8, 14, 17]\n",
+      "16:[18]\n",
+      "17:[15, 19]\n",
+      "18:[1, 16, 14]\n",
+      "19:[17, 19]\n"
      ]
     }
    ],
@@ -170,7 +176,16 @@
     "    topo = gr.toporder()\n",
     "    return topo\n",
     "\n",
-    "# test1\n",
+    "# test1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test2\n",
     "g = generate(20)\n",
     "ks(g)"
    ]
