--- a/classic/graph_playground.ipynb
+++ b/classic/graph_playground.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,9 +131,8 @@
     "            j = np.random.randint(self.nv)\n",
     "            self.add_edge(j,i)\n",
     "    \n",
-    "    def force_toporder(self):\n",
-    "        \"\"\"Forces a DFS-based topological order; is not afraid of cycles, but also ruins DAGs\n",
-    "        (ignores good reasonable edges and just plows ahead).\"\"\"\n",
+    "    def rpo(self):\n",
+    "        \"\"\"Reversed Post-Order (DFS-based). Returns a toporder on a DAG, just an RPO on others.\"\"\"\n",
     "        queue = list(self.adj.keys()) # By itself keys() return dict keys object, and not a list\n",
     "        topo = []\n",
     "        while len(queue)>0:\n",
@@ -175,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -184,19 +183,19 @@
      "text": [
       "Graph of 5 edges:\n",
       "0:[]\n",
-      "1:[0]\n",
-      "2:[4]\n",
-      "3:[1]\n",
+      "1:[2, 4]\n",
+      "2:[1]\n",
+      "3:[4, 0]\n",
       "4:[]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -220,23 +219,23 @@
      "output_type": "stream",
      "text": [
       "Graph of 5 edges:\n",
-      "0:[0]\n",
-      "1:[]\n",
-      "2:[2]\n",
-      "3:[3, 1]\n",
-      "4:[]\n",
+      "0:[2]\n",
+      "1:[2]\n",
+      "2:[3]\n",
+      "3:[1]\n",
+      "4:[0]\n",
       "Topological order:\n",
-      " [4, 3, 1, 2, 0]\n"
+      " [4, 0, 2, 3, 1]\n"
      ]
     }
    ],
    "source": [
-    "# Test forced toporder\n",
+    "# Test Reversed-Post-Order\n",
     "f = Graph(5,directed=True)\n",
     "f.randomize()\n",
     "print(f)\n",
-    "topo = f.force_toporder()\n",
-    "print(\"Topological order:\\n\",topo)"
+    "topo = f.rpo()\n",
+    "print(\"Reversed-Post-Order:\\n\",topo)"
    ]
   },
   {
