--- a/classic/graph_kosaraju_sharir.ipynb
+++ b/classic/graph_kosaraju_sharir.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,6 +59,9 @@
       " |  dfs(self, v=None, visited=None, path=None, topord=None, verbose=False)\n",
       " |      Depth-first search from a given, or random, node. Returns topological sorting from this node.\n",
       " |  \n",
+      " |  erase(self)\n",
+      " |      Remove all edges from a graph.\n",
+      " |  \n",
       " |  isdag(self)\n",
       " |      Checks if there are any cycles in a graph.\n",
       " |  \n",
@@ -66,7 +69,7 @@
       " |      Number of vertices + updates nv property.\n",
       " |  \n",
       " |  randomize(self, nedges=None)\n",
-      " |      Add some random edges to the graph (n_edges==n_nodes by default).\n",
+      " |      Add random edges to the graph (by default, E = V).\n",
       " |  \n",
       " |  reverse(self)\n",
       " |      Reverse the graph.\n",
@@ -76,6 +79,9 @@
       " |  \n",
       " |  trim_loops(self)\n",
       " |      Removes loops from a graph\n",
+      " |  \n",
+      " |  urchin(self, n=20)\n",
+      " |      Generate a directed graph with high modularity.\n",
       " |  \n",
       " |  ----------------------------------------------------------------------\n",
       " |  Data descriptors defined here:\n",
@@ -95,6 +101,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Graph of 7 edges:\n",
+      "0:[0]\n",
+      "1:[1]\n",
+      "2:[6]\n",
+      "3:[4]\n",
+      "4:[2, 4, 3]\n",
+      "5:[2]\n",
+      "6:[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def generate(n=20):\n",
+    "    \"\"\"Generate a directed graph with high modularity\"\"\"\n",
+    "    g = Graph(n,directed=True)\n",
+    "    nclusters = np.floor(np.sqrt(n)).astype(int)\n",
+    "    orphans = list(range(n))                       # List of nodes without links\n",
+    "    for iclust in range(nclusters):\n",
+    "        lo = iclust*nclusters\n",
+    "        if iclust==nclusters-1:\n",
+    "            hi = n\n",
+    "        else:\n",
+    "            hi = (iclust+1)*nclusters        \n",
+    "        for i in range(hi-lo):\n",
+    "            node1 = np.random.randint(low=lo,high=hi)\n",
+    "            node2 = np.random.randint(low=lo,high=hi)\n",
+    "            g.add_edge(node1 , node2)\n",
+    "            if node1 in orphans: orphans.remove(node1)\n",
+    "            if node2 in orphans: orphans.remove(node2)\n",
+    "    for i in orphans:\n",
+    "        if np.random.uniform(1)<0.5:\n",
+    "            g.add_edge(i, np.random.randint(n))\n",
+    "        else:\n",
+    "            g.add_edge(np.random.randint(n),i)\n",
+    "    return g\n",
+    "    \n",
+    "# test\n",
+    "print(generate(7))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -102,47 +157,87 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Graph of 20 edges:\n",
-      "0:[8, 1]\n",
-      "1:[18, 0]\n",
-      "2:[14]\n",
-      "3:[10]\n",
-      "4:[11]\n",
-      "5:[14, 7, 6]\n",
-      "6:[8, 5]\n",
-      "7:[5]\n",
-      "8:[0, 6, 15]\n",
-      "9:[12]\n",
-      "10:[3, 11]\n",
-      "11:[4, 10]\n",
-      "12:[9, 12]\n",
-      "13:[14]\n",
-      "14:[2, 5, 13, 15, 18]\n",
-      "15:[8, 14, 17]\n",
-      "16:[18]\n",
-      "17:[15, 19]\n",
-      "18:[1, 16, 14]\n",
-      "19:[17, 19]\n"
+      "Graph of 6 edges:\n",
+      "0:[]\n",
+      "1:[2]\n",
+      "2:[3]\n",
+      "3:[4, 5]\n",
+      "4:[2]\n",
+      "5:[]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(5, [5]), (3, [3, 4, 2]), (1, [1]), (0, [0])]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "def generate(n=20):\n",
-    "    \"\"\"Generate a directed graph with high modularity\"\"\"\n",
-    "    g = Graph(n)\n",
-    "    nclusters = np.floor(np.sqrt(n)).astype(int)\n",
-    "    for iclust in range(nclusters):\n",
-    "        top = (iclust+1)*nclusters\n",
-    "        if iclust==nclusters-1:\n",
-    "            top = max(n,top) # Make sure to cover the last node\n",
-    "        for i in range(iclust*nclusters, top):\n",
-    "            g.add_edge(i, np.random.randint(low=iclust*nclusters, high=max(n,(iclust+1)*nclusters)))\n",
-    "    for i in range((nclusters // 2) + 1):\n",
-    "        g.add_edge(i*(nclusters+1) % n, (i*(nclusters+1)+1) % n) # Threading as a donut. Not sure if a good idea.\n",
-    "    return g\n",
-    "    \n",
-    "# test\n",
-    "print(generate(20))"
+    "# Try KS\n",
+    "\n",
+    "def ks(g):\n",
+    "    gr = g.reverse()                    # Reverse graph\n",
+    "    queue = gr.rpo()                    # Calculate a reverse postoder on it\n",
+    "    scc = []                            # This will be a list of Strongly Connected Components\n",
+    "    visited = []\n",
+    "    while len(queue)>0:\n",
+    "        v = queue.pop(0)                # Take first element from the queue (RPO of invG)\n",
+    "        this = g.dfs(v,visited=visited) # Do DFS on it, and catch the nodes covered\n",
+    "        scc.append((v,this))            # These nodes are a SCC\n",
+    "        queue = [q for q in queue if not q in this] # Remove them from the queue\n",
+    "        visited += this\n",
+    "    return scc\n",
+    "\n",
+    "# test1\n",
+    "g = Graph(directed=True)\n",
+    "g.add_edges([[1,2],[2,3],[3,4],[4,2],[3,5]])\n",
+    "print(g)\n",
+    "ks(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(29, [29, 24]),\n",
+       " (23, [23, 7, 3]),\n",
+       " (28, [28, 20, 25, 27]),\n",
+       " (26, [26]),\n",
+       " (21, [21]),\n",
+       " (22, [22, 13]),\n",
+       " (19, [19, 15]),\n",
+       " (18, [18]),\n",
+       " (17, [17]),\n",
+       " (16, [16]),\n",
+       " (14, [14]),\n",
+       " (11, [11]),\n",
+       " (12, [12]),\n",
+       " (10, [10]),\n",
+       " (2, [2, 0]),\n",
+       " (1, [1]),\n",
+       " (9, [9, 5]),\n",
+       " (8, [8, 6]),\n",
+       " (4, [4])]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# test2\n",
+    "g = generate(30)\n",
+    "ks(g)"
    ]
   },
   {
@@ -154,40 +249,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[19, 16, 13, 18, 6, 5, 0, 1, 8, 15, 9, 10, 11, 7, 3, 2, 12, 17, 14, 4] [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18]\n"
+      "Graph of 20 edges:\n",
+      "0:[1, 2]\n",
+      "2:[1, 0]\n",
+      "1:[2, 3, 0]\n",
+      "3:[1, 16]\n",
+      "4:[4, 6]\n",
+      "7:[6, 7]\n",
+      "6:[7, 4]\n",
+      "8:[9, 8]\n",
+      "9:[8, 10, 5]\n",
+      "10:[10, 9]\n",
+      "15:[19, 13]\n",
+      "19:[15, 14, 19]\n",
+      "13:[15]\n",
+      "14:[17, 19]\n",
+      "17:[14, 17, 12]\n",
+      "18:[18]\n",
+      "12:[17]\n",
+      "5:[9]\n",
+      "11:[11]\n",
+      "16:[3]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[19, 16, 13, 18, 6, 5, 0, 1, 8, 15, 9, 10, 11, 7, 3, 2, 12, 17, 14, 4]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Try KS\n",
-    "\n",
-    "def ks(g):\n",
-    "    gr = g.reverse()\n",
-    "    topo = gr.toporder()\n",
-    "    return topo\n",
-    "\n",
-    "# test1\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# test2\n",
-    "g = generate(20)\n",
-    "ks(g)"
+    "g = Graph()\n",
+    "g.urchin() # Just a test of random generator (from above) that was moved to graph toolboxs\n",
+    "print(g)"
    ]
   }
  ],
@@ -207,7 +296,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
