--- a/classic/graph_playground.ipynb
+++ b/classic/graph_playground.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,14 +89,14 @@
     "    def dfs(self,v=None,visited=None,path=None,topord=None,verbose=False):\n",
     "        \"\"\"Depth-first search from a given, or random, node. Returns topological sorting from this node.\"\"\"\n",
     "        if v is None: v=next(iter(self.adj.keys()))     # If needed, pick some random vertex as a root\n",
-    "        if visited is None: visited = [0]*len(self.adj) # If needed, mark all v as unvisited\n",
+    "        if visited is None: visited = []                # If needed, set all v as unvisited\n",
     "        if path is None:    path = []\n",
     "        if topord is None:  topord = []                 # Topological ordering, will be returned\n",
-    "        visited[v] = 1                                  # Mark current v as visited\n",
+    "        visited.append(v)                               # Mark current v as visited\n",
     "        path += [v]\n",
     "        if verbose: print(path)\n",
     "        for i in self.adj[v]:                           # For all connections from the current vertex\n",
-    "            if visited[i]==0:                           # If they weren't yet visited, visit them\n",
+    "            if i not in visited:                        # If they weren't yet visited, visit them\n",
     "                topord = self.dfs(i,visited,path,topord=topord,verbose=verbose)\n",
     "        return [v]+topord                               # Update topo-order when LEAVING the node (reverse postorder)\n",
     "                \n",
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -182,10 +182,10 @@
      "output_type": "stream",
      "text": [
       "Graph of 5 edges:\n",
-      "0:[]\n",
-      "1:[2, 4]\n",
-      "2:[1]\n",
-      "3:[4, 0]\n",
+      "0:[4]\n",
+      "1:[2]\n",
+      "2:[0, 1]\n",
+      "3:[1]\n",
       "4:[]\n"
      ]
     },
@@ -195,7 +195,7 @@
        "False"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -219,13 +219,13 @@
      "output_type": "stream",
      "text": [
       "Graph of 5 edges:\n",
-      "0:[2]\n",
-      "1:[2]\n",
-      "2:[3]\n",
-      "3:[1]\n",
-      "4:[0]\n",
-      "Topological order:\n",
-      " [4, 0, 2, 3, 1]\n"
+      "0:[4, 3]\n",
+      "1:[4]\n",
+      "2:[]\n",
+      "3:[]\n",
+      "4:[2]\n",
+      "Reversed-Post-Order:\n",
+      " [4, 2, 3, 1, 0]\n"
      ]
     }
    ],
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -248,16 +248,16 @@
      "output_type": "stream",
      "text": [
       "Graph of 10 edges:\n",
-      "0:[1, 7, 3, 3]\n",
-      "1:[7, 0]\n",
-      "2:[]\n",
-      "3:[5, 0, 0]\n",
-      "4:[6]\n",
-      "5:[8, 3, 6]\n",
-      "6:[9, 4, 5]\n",
-      "7:[1, 0]\n",
-      "8:[5]\n",
-      "9:[6]\n"
+      "0:[5, 6]\n",
+      "1:[5]\n",
+      "2:[8, 2, 6]\n",
+      "3:[3]\n",
+      "4:[]\n",
+      "5:[1, 0]\n",
+      "6:[8, 2, 0]\n",
+      "7:[7]\n",
+      "8:[2, 6]\n",
+      "9:[]\n"
      ]
     }
    ],
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
