--- a/learning python/ch12 tuples.ipynb
+++ b/learning python/ch12 tuples.ipynb
@@ -654,6 +654,26 @@
     "print(*a) # Many tuples (print accepts infinite argument)\n",
     "print(list(zip(*a))) # Now zip switched rows and columns, so to say, which led to unzipping"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-8-357a54c66fd4>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-8-357a54c66fd4>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    a = (x=1, y=2)\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Do we have named tuples?\n",
+    "a = (x=1, y=2) # Not yet\n",
+    "print(a)"
+   ]
   }
  ],
  "metadata": {
@@ -672,7 +692,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
