more string manipulations

--- a/learning python/ch11 dicts.ipynb
+++ b/learning python/ch11 dicts.ipynb
@@ -133,6 +133,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Comparing dicts\n",
+    "a = {1:0,'a':12}\n",
+    "b = dict()\n",
+    "b['a'] = 12\n",
+    "b[1] = 0\n",
+    "\n",
+    "print(a==b) # Yep. You can just compare them directly.\n",
+    "\n",
+    "b[0] = 'cat'\n",
+    "print(a==b) # Fragile harmony was broken"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [
