--- a/fun_models/random_exchange.ipynb
+++ b/fun_models/random_exchange.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
      "output_type": "stream",
      "text": [
       "Equality, should be 0: 0.0\n",
-      "Extreme oligarphy, should be 1: 1.0\n",
+      "Extreme oligarchy, should be 1: 1.0\n",
       "Linear, should be ~1/3: 0.33333333333333326\n"
      ]
     }
@@ -61,7 +61,7 @@
     "\n",
     "# Testing:\n",
     "print('Equality, should be 0:',gini([1]*100))\n",
-    "print('Extreme oligarphy, should be 1:',gini([100]+[0]*99))\n",
+    "print('Extreme oligarchy, should be 1:',gini([100]+[0]*99))\n",
     "print('Linear, should be ~1/3:',gini(np.arange(1,100)))"
    ]
   },
