attempting manual dl

--- a/sklearn_experiments/basic_numpy.ipynb
+++ b/sklearn_experiments/basic_numpy.ipynb
@@ -135,6 +135,26 @@
     "C = np.matmul(X.transpose(),X)/n\n",
     "print(np.round(C,2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.randint(12)"
+   ]
   }
  ],
  "metadata": {
