--- a/learning python/ch12 exercises - anagrams] and waning words.ipynb
+++ b/learning python/ch12 exercises - anagrams] and waning words.ipynb
@@ -73,12 +73,19 @@
     "d = dict()\n",
     "for i in lines:\n",
     "    if len(i)>6:\n",
-    "        key = tuple(sorted(i))\n",
-    "        if key in d:\n",
+    "        key = tuple(sorted(i))  # Sort characters, turn into one object (tuple)\n",
+    "        if key in d:            # ..and use it as a key in a dict. Two anagrams would have same keys!\n",
     "            d[key].append(i)\n",
     "            print(d[key])\n",
     "        else:\n",
     "            d[key] = [i]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Find all words that have a property that you can remove one letter at a time from them (at each step you can find a letter to remove), and at each step you'd still have a valid word. For example: acid -> aid -> id -> i."
    ]
   },
   {
