--- a/classic/coin_change.ipynb
+++ b/classic/coin_change.ipynb
@@ -6,12 +6,12 @@
    "source": [
     "### Coins and change\n",
     "\n",
-    "How to give change with coins in a strange country with strange non-decimal coins"
+    "How to give change with coins in a strange country with strange non-decimal coins. And with a minimal number of them."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -21,103 +21,103 @@
       "0 []\n",
       "1 [1]\n",
       "2 [2]\n",
-      "3 [2, 1]\n",
+      "3 [1, 2]\n",
       "4 [2, 2]\n",
       "5 [5]\n",
-      "6 [5, 1]\n",
+      "6 [1, 5]\n",
       "7 [7]\n",
-      "8 [7, 1]\n",
-      "9 [7, 2]\n",
-      "10 [7, 2, 1]\n",
+      "8 [1, 7]\n",
+      "9 [2, 7]\n",
+      "10 [5, 5]\n",
       "11 [11]\n",
-      "12 [11, 1]\n",
-      "13 [11, 2]\n",
-      "14 [11, 2, 1]\n",
-      "15 [11, 2, 2]\n",
-      "16 [11, 5]\n",
-      "17 [11, 5, 1]\n",
-      "18 [11, 7]\n",
-      "19 [11, 7, 1]\n",
-      "20 [11, 7, 2]\n",
-      "21 [11, 7, 2, 1]\n",
+      "12 [1, 11]\n",
+      "13 [2, 11]\n",
+      "14 [7, 7]\n",
+      "15 [1, 7, 7]\n",
+      "16 [5, 11]\n",
+      "17 [1, 5, 11]\n",
+      "18 [7, 11]\n",
+      "19 [1, 7, 11]\n",
+      "20 [2, 7, 11]\n",
+      "21 [5, 5, 11]\n",
       "22 [11, 11]\n",
       "23 [23]\n",
-      "24 [23, 1]\n",
-      "25 [23, 2]\n",
-      "26 [23, 2, 1]\n",
-      "27 [23, 2, 2]\n",
-      "28 [23, 5]\n",
-      "29 [23, 5, 1]\n",
-      "30 [23, 7]\n",
-      "31 [23, 7, 1]\n",
-      "32 [23, 7, 2]\n",
-      "33 [23, 7, 2, 1]\n",
-      "34 [23, 11]\n",
-      "35 [23, 11, 1]\n",
-      "36 [23, 11, 2]\n",
-      "37 [23, 11, 2, 1]\n",
-      "38 [23, 11, 2, 2]\n",
-      "39 [23, 11, 5]\n",
-      "40 [23, 11, 5, 1]\n",
-      "41 [23, 11, 7]\n",
-      "42 [23, 11, 7, 1]\n",
-      "43 [23, 11, 7, 2]\n",
-      "44 [23, 11, 7, 2, 1]\n",
-      "45 [23, 11, 11]\n",
+      "24 [1, 23]\n",
+      "25 [2, 23]\n",
+      "26 [1, 2, 23]\n",
+      "27 [2, 2, 23]\n",
+      "28 [5, 23]\n",
+      "29 [1, 5, 23]\n",
+      "30 [7, 23]\n",
+      "31 [1, 7, 23]\n",
+      "32 [2, 7, 23]\n",
+      "33 [5, 5, 23]\n",
+      "34 [11, 23]\n",
+      "35 [1, 11, 23]\n",
+      "36 [2, 11, 23]\n",
+      "37 [7, 7, 23]\n",
+      "38 [1, 7, 7, 23]\n",
+      "39 [5, 11, 23]\n",
+      "40 [1, 5, 11, 23]\n",
+      "41 [7, 11, 23]\n",
+      "42 [1, 7, 11, 23]\n",
+      "43 [2, 7, 11, 23]\n",
+      "44 [5, 5, 11, 23]\n",
+      "45 [11, 11, 23]\n",
       "46 [23, 23]\n",
-      "47 [23, 23, 1]\n",
-      "48 [23, 23, 2]\n",
-      "49 [23, 23, 2, 1]\n",
-      "50 [23, 23, 2, 2]\n",
+      "47 [1, 23, 23]\n",
+      "48 [2, 23, 23]\n",
+      "49 [1, 2, 23, 23]\n",
+      "50 [2, 2, 23, 23]\n",
       "51 [51]\n",
-      "52 [51, 1]\n",
-      "53 [51, 2]\n",
-      "54 [51, 2, 1]\n",
-      "55 [51, 2, 2]\n",
-      "56 [51, 5]\n",
-      "57 [51, 5, 1]\n",
-      "58 [51, 7]\n",
-      "59 [51, 7, 1]\n",
-      "60 [51, 7, 2]\n",
-      "61 [51, 7, 2, 1]\n",
-      "62 [51, 11]\n",
-      "63 [51, 11, 1]\n",
-      "64 [51, 11, 2]\n",
-      "65 [51, 11, 2, 1]\n",
-      "66 [51, 11, 2, 2]\n",
-      "67 [51, 11, 5]\n",
-      "68 [51, 11, 5, 1]\n",
-      "69 [51, 11, 7]\n",
-      "70 [51, 11, 7, 1]\n",
-      "71 [51, 11, 7, 2]\n",
-      "72 [51, 11, 7, 2, 1]\n",
-      "73 [51, 11, 11]\n",
-      "74 [51, 23]\n",
-      "75 [51, 23, 1]\n",
-      "76 [51, 23, 2]\n",
-      "77 [51, 23, 2, 1]\n",
-      "78 [51, 23, 2, 2]\n",
-      "79 [51, 23, 5]\n",
-      "80 [51, 23, 5, 1]\n",
-      "81 [51, 23, 7]\n",
-      "82 [51, 23, 7, 1]\n",
-      "83 [51, 23, 7, 2]\n",
-      "84 [51, 23, 7, 2, 1]\n",
-      "85 [51, 23, 11]\n",
-      "86 [51, 23, 11, 1]\n",
-      "87 [51, 23, 11, 2]\n",
-      "88 [51, 23, 11, 2, 1]\n",
-      "89 [51, 23, 11, 2, 2]\n",
-      "90 [51, 23, 11, 5]\n",
-      "91 [51, 23, 11, 5, 1]\n",
-      "92 [51, 23, 11, 7]\n",
-      "93 [51, 23, 11, 7, 1]\n",
-      "94 [51, 23, 11, 7, 2]\n",
-      "95 [51, 23, 11, 7, 2, 1]\n",
-      "96 [51, 23, 11, 11]\n",
-      "97 [51, 23, 23]\n",
-      "98 [51, 23, 23, 1]\n",
-      "99 [51, 23, 23, 2]\n"
+      "52 [1, 51]\n",
+      "53 [2, 51]\n",
+      "54 [1, 2, 51]\n",
+      "55 [2, 2, 51]\n",
+      "56 [5, 51]\n",
+      "57 [1, 5, 51]\n",
+      "58 [7, 51]\n",
+      "59 [1, 7, 51]\n",
+      "60 [2, 7, 51]\n",
+      "61 [5, 5, 51]\n",
+      "62 [11, 51]\n",
+      "63 [1, 11, 51]\n",
+      "64 [2, 11, 51]\n",
+      "65 [7, 7, 51]\n",
+      "66 [1, 7, 7, 51]\n",
+      "67 [5, 11, 51]\n",
+      "68 [1, 5, 11, 51]\n",
+      "69 [7, 11, 51]\n",
+      "70 [1, 7, 11, 51]\n",
+      "71 [2, 7, 11, 51]\n",
+      "72 [5, 5, 11, 51]\n",
+      "73 [11, 11, 51]\n",
+      "74 [23, 51]\n",
+      "75 [1, 23, 51]\n",
+      "76 [2, 23, 51]\n",
+      "77 [1, 2, 23, 51]\n",
+      "78 [2, 2, 23, 51]\n",
+      "79 [5, 23, 51]\n",
+      "80 [1, 5, 23, 51]\n",
+      "81 [7, 23, 51]\n",
+      "82 [1, 7, 23, 51]\n",
+      "83 [2, 7, 23, 51]\n",
+      "84 [5, 5, 23, 51]\n",
+      "85 [11, 23, 51]\n",
+      "86 [1, 11, 23, 51]\n",
+      "87 [2, 11, 23, 51]\n",
+      "88 [7, 7, 23, 51]\n",
+      "89 [1, 7, 7, 23, 51]\n",
+      "90 [5, 11, 23, 51]\n",
+      "91 [1, 5, 11, 23, 51]\n",
+      "92 [7, 11, 23, 51]\n",
+      "93 [1, 7, 11, 23, 51]\n",
+      "94 [2, 7, 11, 23, 51]\n",
+      "95 [5, 5, 11, 23, 51]\n",
+      "96 [11, 11, 23, 51]\n",
+      "97 [23, 23, 51]\n",
+      "98 [1, 23, 23, 51]\n",
+      "99 [2, 23, 23, 51]\n"
      ]
     }
    ],
@@ -141,9 +141,9 @@
     "            else:\n",
     "                part = solve(n-c)\n",
     "                mem[n-c] = part\n",
-    "            out.append((len(part)+1,[c]+part))\n",
+    "            out.append((len(part)+1,[c]+part)) # A trick here: tuples are sortable, so store the worth of each combo!\n",
     "    #print(out)\n",
-    "    return out[0][1]\n",
+    "    return sorted(out)[0][1]\n",
     "\n",
     "for i in range(100):\n",
     "    print(i,solve(i))"
