--- a/learning python/strings.ipynb
+++ b/learning python/strings.ipynb
@@ -210,6 +210,46 @@
     "print(interp('a','X'))\n",
     "print(interp('a','ф'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "65"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ord('A')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'AA0 AA1 AA2 AA3 AA4 AA5 AA6 AA7 AA8 AA9'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "' '.join([chr(i)+chr(j)+str(k) for i in range(65,91) for j in range(65,91) for k in range(10)][:10])"
+   ]
   }
  ],
  "metadata": {
@@ -228,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
