conv: minor edits

--- a/sklearn_experiments/convolution.ipynb
+++ b/sklearn_experiments/convolution.ipynb
@@ -117,15 +117,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "So an optinal filter to detect a ramp looks like a flip: down-up (if cross-correlating, as I do it here, or up-down, if using mathematical convolution, that is reversed).\n",
-    "\n",
-    "What does it tell us about the shape of devonvolutional kernels? Hard to tell (it feels like I should know that, but I don't remember...)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 92,
    "metadata": {},
@@ -144,10 +135,12 @@
     }
    ],
    "source": [
-    "Y = np.zeros(len(x))\n",
-    "for i in range(wing,len(x)-wing):\n",
-    "    Y[i] = np.dot(w,x[i-wing:i+wing+1])\n",
-    "    \n",
+    "#Y = np.zeros(len(x))\n",
+    "#for i in range(wing,len(x)-wing):\n",
+    "#    Y[i] = np.dot(w,x[i-wing:i+wing+1])\n",
+    "\n",
+    "# Reconstruction:\n",
+    "\n",
     "Y = np.convolve(x,np.flip(w), mode='same')+b\n",
     "    \n",
     "# All figures at once:\n",
@@ -161,6 +154,7 @@
     "plt.subplot(223);\n",
     "plt.plot(L);\n",
     "plt.title('Loss function')\n",
+    "\n",
     "plt.subplot(222);\n",
     "plt.plot(w);\n",
     "plt.title('Deconvolution kernel')\n",
