degrees: minor improvement

--- a/lil_problems/deg_separation.ipynb
+++ b/lil_problems/deg_separation.ipynb
@@ -198,7 +198,7 @@
     "print('Mean degree:',mean_deg)\n",
     "\n",
     "def kill(net,deg,i):\n",
-    "    \"\"\"Remove an individual.\"\"\"\n",
+    "    \"\"\"Remove this individual.\"\"\"\n",
     "    for j in range(len(net)):\n",
     "        if j!=i:\n",
     "            if i in net[j]:\n",
@@ -211,7 +211,7 @@
     "plt.xlabel('Acquired connection');\n",
     "plt.ylabel('Expected connectedness');\n",
     "\n",
-    "# Destiny of a child: option 1 - all connections come from a parent\n",
+    "# Destiny of a child:\n",
     "for world in ['patriarchal','dystopian','meritocratic']:\n",
     "    print(world)\n",
     "    history = np.zeros((mean_deg,n_trials))\n",
@@ -221,21 +221,21 @@
     "        parent = rnd.randint(0,n_people-1)\n",
     "        pool = net[parent].copy()\n",
     "        count = 0\n",
-    "        while len(pool)>0 and count<mean_deg:\n",
+    "        while len(pool)>0 and count<mean_deg: # Let this kid aquire at most average number of connections\n",
     "            new_con = rnd.choice(pool)\n",
     "            pool.remove(new_con)\n",
     "            net[new_con].append(0)\n",
     "            net[0].append(new_con)\n",
-    "            deg[0,:] = 0                      # Clean current data for individual 0\n",
+    "            deg[0,:] = 0                      # Clean current distances for person 0\n",
     "            deg[:,0] = 0\n",
     "            for j in range(1,len(net)):\n",
-    "                bfs(net,deg,0,j)              # The assumption is that individual 0 doesn't affect other distances too much\n",
+    "                bfs(net,deg,0,j)              # Assume that person 0 doesn't affect other distances too much\n",
     "            history[count,i_trial] = np.mean(deg[0,:])\n",
     "            \n",
     "            if world=='dystopian':\n",
-    "                pool = [rnd.randint(0,n_people-1)] # Next person\n",
+    "                pool = [rnd.randint(0,n_people-1)] # Next random person\n",
     "            if world=='meritocratic':\n",
-    "                pool = pool + net[j] # All connections of this new person\n",
+    "                pool = pool + net[j]               # Include all connections of this new friend\n",
     "            count += 1\n",
     "        if count<mean_deg:\n",
     "            history[count:,i_trial] = history[count-1,i_trial]\n",
