degree model: further improved

--- a/lil_problems/deg_separation.ipynb
+++ b/lil_problems/deg_separation.ipynb
@@ -4,17 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A small model on degrees of separation\n",
+    "# OBSOLETE: A small model on degrees of separation\n",
     "\n",
-    "A small model inspired by this tweet by Andrew Trask: https://twitter.com/iamtrask/status/1233815704543080448\n",
-    "\n",
-    "    So most folks have heard of 5/6-degrees of separation\n",
-    "    In theory, every two people on earth are connected by roughly 5-6 relationships\n",
-    "    But that's for a *whole* life of interactions!!!\n",
-    "    I wonder what it is for 2 days of interactions, or 7 days of interactions? \n",
-    "    Does anyone know?\n",
-    "\n",
-    "Below, I'm trying to model this situation explicitly, with 3 different scenarios of how a kid may be integrated in the society."
+    "### See an updated model in the \"fun models\" folder: https://github.com/khakhalin/Sketches/blob/master/fun_models/deg_separation.ipynb"
    ]
   },
   {
