--- a/classic/simple_problems.ipynb
+++ b/classic/simple_problems.ipynb
@@ -20,7 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = [1,1,1,2,2,3,3,4,5,5,5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -39,10 +48,93 @@
     "                nums.pop(i)\n",
     "            else:\n",
     "                i += 1\n",
-    "        \n",
-    "l = [1,1,1,2,2,3,3,4,5,5,5]\n",
+    "\n",
     "remove_duplicates(l)\n",
     "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Same but with list comprehensions (still requires the list to be sorted)\n",
+    "[l[0]] + [l[i] for i in range(1,len(l)) if l[i]!=l[i-1]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Native Python one-liner for unique() :)\n",
+    "list(set(l))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Another ridiculous approach (also requires the list to be sorted)\n",
+    "[l[j] for j in range(len(l)) if len([l[i] for i in range(j+1) if l[i]==l[j]])==1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# A variation on the same theme, but now true unique (not necessarily sorted)\n",
+    "[l[i] for i in range(len(l)) if l[i] not in l[:i]]"
    ]
   },
   {
